// ============================================================
// BLOCKTRACE — ERD Off-chain (v2)
// ============================================================
// Yêu cầu cập nhật:
// 1. Tách vai trò Producer / Carrier / Customer
// 2. Bổ sung mã neo On-chain (blockchain_tx_hash, smart_contract_address)
// 3. Hoàn thiện luồng Issue & Resolution
// 4. Đồng bộ trạng thái tài chính (Money Path)
// 5. Tối ưu truy vấn theo tokenId (Query Logic)
// ============================================================


// ------------------------------------------------------------
// NHÓM 1 — ĐỊNH DANH VAI TRÒ
// Tách Producer / Carrier / Customer để chấm Reputation Score
// chính xác tại Phase 6
// ------------------------------------------------------------

Table PRODUCER {
  producer_id         varchar [pk]
  email               varchar [unique]
  phone_number        varchar [unique]
  origin_location     varchar
  full_name           varchar
  company_name        varchar [unique]
  business_license    varchar [unique]
  tax_code            varchar [unique]
  certification_list  text    [note: "Danh sách chứng chỉ sản xuất (GlobalGAP, VietGAP...)"]
  reputation_score    float   [note: "Điểm uy tín tổng hợp, cập nhật sau mỗi Resolution"]
  created_at          timestamp
}

Table CARRIER {
  carrier_id          varchar [pk]
  email               varchar [unique]
  phone_number        varchar [unique]
  company_name        varchar [unique]
  business_license    varchar [unique]
  tax_code            varchar [unique]
  vehicle_list        text    [note: "Danh sách phương tiện: biển số, loại xe, tải trọng"]
  cold_chain_cert     varchar [note: "Chứng chỉ vận chuyển lạnh nếu có"]
  reputation_score    float   [note: "Điểm uy tín tổng hợp, cập nhật sau mỗi Resolution"]
  created_at          timestamp
}

Table CUSTOMER {
  customer_id         varchar [pk]
  email               varchar [unique]
  phone_number        varchar [unique]
  full_name           varchar
  origin_location     varchar
  customer_type       varchar [note: "Individual / Enterprise"]
  created_at          timestamp
}


// ------------------------------------------------------------
// NHÓM 2 — LÔ HÀNG (BATCH)
// Trung tâm hệ thống. Bổ sung mã neo On-chain (yêu cầu 2 & 5)
// ------------------------------------------------------------

Table BATCH_NFT {
  tokenId                 varchar [pk, note: "Khóa chính — dùng để truy vấn nhanh (yêu cầu 5)"]
  producer_id             varchar [ref: > PRODUCER.producer_id]
  productName             varchar
  origin                  varchar
  harvestDate             date
  certification           varchar
  batchNumber             varchar

  // Mã neo On-chain (yêu cầu 2)
  blockchain_tx_hash      varchar [unique, note: "Hash giao dịch mint NFT trên blockchain"]
  smart_contract_address  varchar [note: "Địa chỉ smart contract quản lý lô hàng"]
  metadata_ipfs_cid       varchar [note: "CID IPFS của metadata lô hàng — dùng rehash Phase 6"]

  created_at              timestamp

  indexes {
    tokenId [name: "idx_batch_tokenId"]
  }
}

Table QR_CODE {
  qr_id   varchar [pk]
  tokenId varchar [ref: - BATCH_NFT.tokenId, note: "1-1 với lô hàng"]
  url     varchar [note: "VD: https://blocktrace.app/verify/123"]
  generated_at timestamp
}


// ------------------------------------------------------------
// NHÓM 3 — GIAO DỊCH & TÀI CHÍNH (Money Path)
// Đồng bộ trạng thái Escrow On-chain (yêu cầu 4)
// ------------------------------------------------------------

Table TRANSACTION {
  tx_id                   varchar [pk]
  tokenId                 varchar [ref: > BATCH_NFT.tokenId, note: "Index truy vấn nhanh (yêu cầu 5)"]
  carrier_id              varchar [ref: > CARRIER.carrier_id]
  customer_id             varchar [ref: > CUSTOMER.customer_id]

  // Đồng bộ trạng thái Escrow Vault On-chain (yêu cầu 4)
  escrow_status           varchar [note: "Locked / Released / Refunded / Disputed — mirror On-chain"]
  escrow_amount           float   [note: "Số tiền đang giữ trong Escrow"]
  payment_released_at     timestamp [note: "Thời điểm giải ngân — sau khi xác nhận giao hàng"]
  payment_released_reason text    [note: "Lý do giải ngân: giao hàng thành công / hết thời hạn"]

  // Mã neo On-chain (yêu cầu 2)
  blockchain_tx_hash      varchar [unique, note: "Hash giao dịch thanh toán trên blockchain"]
  smart_contract_address  varchar [note: "Địa chỉ Escrow smart contract"]

  created_at              timestamp

  indexes {
    tokenId [name: "idx_tx_tokenId"]
  }
}

Table BILLING_DETAIL {
  billing_id              varchar [pk]
  tx_id                   varchar [ref: - TRANSACTION.tx_id, note: "1-1 với Transaction"]
  flat_fee                float
  logistics_fee           float
  tax_amount              float
  total_amount            float
  invoice_url             varchar [note: "Link hóa đơn PDF trên IPFS/S3"]
  refund_amount           float   [note: "Số tiền hoàn — 0 nếu không hoàn"]
  refund_reason           text    [note: "Lý do hoàn tiền — đối soát với Resolution"]
  billing_status          varchar [note: "Pending / Paid / Refunded / Disputed"]
}

Table SHIPMENT_LOG {
  log_id                  varchar [pk]
  tx_id                   varchar [ref: > TRANSACTION.tx_id]
  tokenId                 varchar [ref: > BATCH_NFT.tokenId, note: "Index truy vấn nhanh (yêu cầu 5)"]
  temperature_logs        text
  humidity_logs           text
  gps_trucking            text    [note: "Chuỗi tọa độ GPS theo thời gian"]
  door_open_close         text    [note: "Log mở/đóng cửa container"]
  logistics_documents     text    [note: "Vận đơn, chứng từ hải quan"]
  logged_at               timestamp

  indexes {
    tokenId [name: "idx_shiplog_tokenId"]
  }
}


// ------------------------------------------------------------
// NHÓM 4 — XỬ LÝ SỰ CỐ (Issue & Resolution)
// Hoàn thiện luồng bằng chứng và kết quả xử lý (yêu cầu 3)
// ------------------------------------------------------------

Table ISSUE_REPORT {
  issue_id                varchar [pk]
  tokenId                 varchar [ref: > BATCH_NFT.tokenId, note: "Index truy vấn nhanh (yêu cầu 5)"]
  reporter_type           varchar [note: "Producer / Carrier / Customer"]
  reporter_id             varchar [note: "FK động theo reporter_type"]
  issue_type              varchar [note: "Damaged / Spoiled / Missing / Delayed / Other"]
  issue_description       text
  evidence_ipfs_cid       text    [note: "Danh sách CID ảnh/video bằng chứng trên IPFS (yêu cầu 3)"]
  inspection_report_url   varchar [note: "Báo cáo kiểm định từ bên thứ ba"]
  issue_status            varchar [note: "Open / Under Review / Resolved / Rejected"]

  // Mã neo On-chain (yêu cầu 2)
  blockchain_tx_hash      varchar [note: "Hash giao dịch ghi sự cố lên On-chain"]

  reported_at             timestamp

  indexes {
    tokenId [name: "idx_issue_tokenId"]
  }
}

Table RESOLUTION {
  resolution_id           varchar [pk]
  issue_id                varchar [ref: - ISSUE_REPORT.issue_id, note: "1-1 với Issue"]
  resolution_type         varchar [note: "Refund / Replace / Recall / Rejected (yêu cầu 3)"]
  resolved_by             varchar [note: "ID người/bộ phận xử lý"]
  resolution_description  text
  settlement_doc_url      varchar [note: "Biên bản thỏa thuận PDF trên IPFS"]

  // Đối soát tài chính (yêu cầu 4)
  financial_impact        varchar [note: "Refund / Deduct_Carrier / No_Action"]
  refund_amount           float   [note: "Số tiền hoàn — khớp với BILLING_DETAIL.refund_amount"]
  recall_batch            boolean [note: "true nếu thu hồi toàn bộ lô hàng"]

  // Mã neo On-chain (yêu cầu 2)
  blockchain_tx_hash      varchar [note: "Hash giao dịch ghi kết quả Resolution lên On-chain"]

  resolved_at             timestamp
}


// ------------------------------------------------------------
// NHÓM 5 — TRUY VẤN & UY TÍN (Phase 6)
// Tối ưu truy vấn theo tokenId, hỗ trợ rehash (yêu cầu 5)
// ------------------------------------------------------------

Table QUERY_HISTORY {
  query_id                varchar [pk]
  tokenId                 varchar [ref: > BATCH_NFT.tokenId, note: "Index chính — truy vấn nhanh"]
  queried_by_type         varchar [note: "Producer / Carrier / Customer / Anonymous"]
  queried_by_id           varchar [note: "FK động theo queried_by_type"]
  metadata_hash_verified  varchar [note: "Hash metadata tại thời điểm truy vấn — dùng rehash"]
  integrity_check         boolean [note: "true nếu hash khớp On-chain — tính toàn vẹn Phase 6"]
  queried_at              timestamp

  indexes {
    tokenId [name: "idx_query_tokenId"]
  }
}

Table REPUTATION_LOG {
  log_id                  varchar [pk]
  subject_type            varchar [note: "Producer / Carrier"]
  subject_id              varchar [note: "FK động: producer_id hoặc carrier_id"]
  tokenId                 varchar [ref: > BATCH_NFT.tokenId, note: "Lô hàng liên quan"]
  resolution_id           varchar [ref: > RESOLUTION.resolution_id, note: "Nguồn gốc thay đổi điểm"]
  score_before            float
  score_after             float
  score_delta             float   [note: "Dương = tăng, Âm = giảm"]
  reason                  text    [note: "Giải thích lý do thay đổi điểm"]
  logged_at               timestamp

  indexes {
    subject_id [name: "idx_rep_subject"]
    tokenId    [name: "idx_rep_tokenId"]
  }
}
